--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <main>
       <!-- Cartão de crédito -->
       <section class="card-section">
-        <div class="card">
+        <div class="card front-card">
           <img src="/public/Icon.svg" alt="" class="card-logo" />
-          <p class="card-number">#### #### #### ####</p>
+          <p class="card-number">XXXX XXXX XXXX XXXX</p>
           <div class="card-footer">
             <div>
               <p>Titular</p>
@@ -28,6 +28,11 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="card back-card">
+            <div class="card-magnetic-strip"></div>
+            <p class="card-cvv">XXX</p>
+            <img src="./public/Icon.svg" alt="" class="card-logo">
         </div>
       </section>
 
